tdf#92207 sc: Make the text background color button work

Change-Id: I687a58e17ce30ced101c4585884106cff9b6292b